@@ -35,6 +35,11 @@ endif::[]
 [[release-notes-4.x]]
 === Ruby Agent version 4.x
 
+[float]
+===== Fixed
+
+- Fix growing number of open file descriptors when HTTP request to APM is never sent {pull}1351[#1351]
+
 [[release-notes-4.6.0]]
 ==== 4.6.0
 
